--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "~13.1.0",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
@@ -23,6 +24,7 @@
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@ckeditor/ckeditor5-angular": "^2.0.2",
     "@ckeditor/ckeditor5-build-classic": "^32.0.0",
+    "@firebase/auth": "^0.20.5",
     "@fullcalendar/angular": "^5.10.1",
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/interaction": "^5.10.1",
@@ -49,7 +51,7 @@
     "echarts": "^5.3.0",
     "echarts-gl": "^2.0.8",
     "file-saver": "^2.0.5",
-    "firebase": "^8.7.1",
+    "firebase": "^9.9.1",
     "flatpickr": "^4.6.9",
     "intersection-observer": "^0.12.0",
     "leaflet": "^1.7.1",
