--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ag-grid-angular": "^27.0.0",
     "ag-grid-community": "^27.0.1",
     "angular-archwizard": "^7.0.0",
+    "angular-cli-ghpages": "^1.0.3",
     "angular-count-to": "0.0.3",
     "angular-feather": "^6.2.0",
     "angular-ng-autocomplete": "^2.0.8",
