--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "ngx-lightbox": "^2.5.2",
     "ngx-mask": "^13.1.1",
     "ngx-nestable": "^0.9.4",
+    "ngx-pagination": "^6.0.2",
     "ngx-swiper-wrapper": "^10.0.0",
     "ngx-ui-switch": "^13.0.2",
     "prismjs": "^1.27.0",
